Form control locale-chanel label alignment fixed

--- a/packages/Webkul/Admin/src/Resources/assets/sass/partials/_default.scss
+++ b/packages/Webkul/Admin/src/Resources/assets/sass/partials/_default.scss
@@ -447,6 +447,16 @@ body {
         .locale {
             float: right;
             color: $role-text-color;
+            position: relative;
+            right: 30%;
+        }
+    }
+
+    &.have-wysiwyg {
+        label {
+            .locale {
+                position: unset;
+            }
         }
     }
 
